--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="lib/moment/moment.js"></script>
+    <script src="lib/moment/locale/de.js"></script>
   </head>
 
   <body ng-app="mediApp">
