Zeiten-Range generiert anschtatt von Hand

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/services.js"></script>
     <script src="lib/moment/moment.js"></script>
     <script src="lib/moment/locale/de.js"></script>
+    <script src="js/twix.min.js"></script>
   </head>
 
   <body ng-app="mediApp">
